(Service) Update Auth System enterprise
